--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,4 @@
-server.port=8084
-
-spring.application.name=CONFIG-SERVICE
-
-spring.cloud.config.server.git.uri=https://github.com/Zies007/microservice-config
-spring.cloud.config.server.git.clone-on-start=true
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
